fix: resolve the bound method the way the call site does
Review found the member resolution added last commit wrong in three
ways, two of them worse than checking nothing: a pair that the previous
code correctly refused now passed the check and failed inside the
generated file instead.

Erasure was applied unconditionally. The emitter writes a raw
instantiation only when the using class is generic, so a non-generic
one keeps its full parameterisation at the call site, and erasing threw
away the difference between List<String> and List<Long>. Erasure is now
conditioned on the same thing the emitter conditions it on.

Members were read as declared rather than as seen. A concrete method
inherited from a generic base carries that base's type variable, which
means nothing alone; asMemberOf substitutes what the subclass fixed it
to, so a backward declared to return T reads as returning Integer.

Overloads were ordered by return type, which makes the answer depend on
declaration order: two returning the same type compare equal, so
whichever was visited last was kept. Applicable overloads are now
filtered against the argument the call site passes and ordered by
most-specific parameter, which is what javac does.

The four shapes each regression covers now have tests, including the
overload pair asserted in both declaration orders -- a single order
passed by accident before.

Also corrected: the comment claimed a class implementing the raw
BridgeFn escapes because it declares no override to resolve. It escapes
because the check short-circuits before resolution when there are no
type arguments to read, which is a different thing and a closable one.